﻿============== FOR VERSIONS ==============
oak 2.5.7+
oak-edge 1.9.7+
oak-json 1.1.2+
=============== CHANGES ==================
Json serialization does camel casing by default, use the NoCasingChange class
in conjunction with the DynamicJsonResult to override this default behavior:

return new DynamicJsonResult(someObject)
{
	Casing = new NoCasingChange()
};


============== FOR VERSIONS ==============
oak 2.5.6+
oak-edge 1.9.6+
seed 1.1.0+
=============== CHANGES ==================
Added ability to declare tables with schemas:
https://github.com/amirrajan/Oak/blob/e2b476be0e253e1715b5093d82f9ead931f47f08/Oak.Tests/describe_Seed/schemas.cs
https://github.com/amirrajan/Oak/blob/e2b476be0e253e1715b5093d82f9ead931f47f08/Oak/Seed.cs
https://github.com/amirrajan/Oak/commit/e2b476be0e253e1715b5093d82f9ead931f47f08

============== FOR VERSIONS ==============
oak 2.5.4+
oak-edge 1.9.3+
cambium 1.4.8+
=============== CHANGES ==================
Added FindBy to DynamicRepository
https://github.com/amirrajan/Oak/blob/3ab0a010f46da59c6e0c779a3de40014f18ed43a/Oak/Massive.cs#L753
https://github.com/amirrajan/Oak/blob/3ab0a010f46da59c6e0c779a3de40014f18ed43a/Oak.Tests/describe_DynamicRepository/dynamic_query.cs

============== FOR VERSIONS ==============
oak 2.4.9+
oak-edge 1.8.9+
oak-json 1.0.8+
gemini 1.2.6+
cambium 1.4.5+
=============== CHANGES ==================
- Json serialization schemes that allow for self referencing objects
  https://github.com/amirrajan/Oak/blob/2bc8609e14cbf12d8c8a9765d86dfe81fe63dd27/Oak.Tests/describe_DynamicToJson.cs

- Gemini.ToString/Gemini.__Info__() supports self reference objects
  https://github.com/amirrajan/Oak/blob/6f102f7d46866fa74fc6371230b0e4ebd14a779b/Oak.Tests/describe_Gemini/describe_Info.cs
  
- Link back on BelongsTo relation will now return a collection as opposed
  to just a reference to the last object (if multiple values are returned)