@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NSpec">
-      <HintPath>..\packages\nspec.0.9.65\lib\NSpec.dll</HintPath>
+      <HintPath>..\packages\nspec.0.9.66\lib\NSpec.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
