@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="nspec" version="0.9.65" targetFramework="net40" />
+  <package id="nspec" version="0.9.66" targetFramework="net40" />
 </packages>
