@@ -8,7 +8,7 @@ using Massive;
 
 namespace __NAME__.Controllers
 {
-    public class HomeController : Controller
+    public class HomeController : BaseController
     {
         public ActionResult Index()
         {
