@@ -7,6 +7,6 @@ website_deploy_directory_load_balanced_2: c:\iisexpress\__NAME___5000
 solution_name: __NAME__ #just the name, no .sln extension
 mvc_project: __NAME__ #just the folder name, no .csproj extension
 test_project: __NAME__.Tests #just the folder name, no .csproj extension
-test_runner: ./packages/nspec.0.9.65/tools/NSpecRunner.exe
+test_runner: ./packages/nspec.0.9.66/tools/NSpecRunner.exe
 iis_express: C:\Program Files (x86)\IIS Express
 database_name: __NAME__
